@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-07-08T16:18:56Z",
+  "timestamp" : "2022-07-09T00:56:12Z",
   "count_outdated" : 380,
   "uniques_outdated" : 206,
-  "count" : 407,
+  "count" : 408,
   "uniques" : 221,
   "clones" : [
     {
@@ -98,8 +98,8 @@
     },
     {
       "timestamp": "2022-07-08T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
